News UAT/force-app/main/default/objects/SalesSummaryStaging__c/SalesSummaryStaging__c.object-meta.xml
<CustomObject>
    <description>A staging object for the data services team to push their data into for transformation into the Sales Summary object</description>
    <label>Sales Summary Staging</label>
    <nameField>
        <displayFormat>STAGE{0000000000}</displayFormat>
        <label>Staging Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Summary Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>