News UAT/force-app/main/default/objects/SalesSummaryStaging__c/fields/BookingRevenueAmount__c.field-meta.xml
<CustomField>
    <fullName>BookingRevenueAmount__c</fullName>
    <label>Booking Revenue Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>