News UAT/force-app/main/default/objects/SalesSummaryStaging__c/fields/CurrentFlag__c.field-meta.xml
<CustomField>
    <fullName>CurrentFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Flag</label>
    <type>Checkbox</type>
</CustomField>