News UAT/force-app/main/default/objects/SalesSummaryStaging__c/fields/Delete_TS__c.field-meta.xml
<CustomField>
    <fullName>Delete_TS__c</fullName>
    <label>Delete TS</label>
    <type>DateTime</type>
</CustomField>