News UAT/force-app/main/default/objects/SalesSummaryStaging__c/fields/DeleteDate__c.field-meta.xml
<CustomField>
    <fullName>DeleteDate__c</fullName>
    <label>Delete Date</label>
    <type>Date</type>
</CustomField>