News UAT/force-app/main/default/objects/SalesSummaryStaging__c/fields/DivisionId__c.field-meta.xml
<CustomField>
    <fullName>DivisionId__c</fullName>
    <label>Division Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>