News UAT/force-app/main/default/objects/SalesSummaryStaging__c/fields/DivisionScheme__c.field-meta.xml
<CustomField>
    <fullName>DivisionScheme__c</fullName>
    <label>Division Scheme</label>
    <length>20</length>
    <type>Text</type>
</CustomField>