News UAT/force-app/main/default/objects/SalesSummaryStaging__c/fields/EFF_TS__c.field-meta.xml
<CustomField>
    <fullName>EFF_TS__c</fullName>
    <label>EFF TS</label>
    <type>DateTime</type>
</CustomField>