News UAT/force-app/main/default/objects/SalesSummaryStaging__c/fields/EffectiveRunId__c.field-meta.xml
<CustomField>
    <fullName>EffectiveRunId__c</fullName>
    <label>Effective Run Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>