News UAT/force-app/main/default/objects/SalesSummaryStaging__c/fields/EmployeeFirstName__c.field-meta.xml
<CustomField>
    <fullName>EmployeeFirstName__c</fullName>
    <label>Employee First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>