News UAT/force-app/main/default/objects/SalesSummaryStaging__c/fields/EmployeeLastName__c.field-meta.xml
<CustomField>
    <fullName>EmployeeLastName__c</fullName>
    <label>Employee Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>