News UAT/force-app/main/default/objects/SalesSummaryStaging__c/fields/EmployeeNumber__c.field-meta.xml
<CustomField>
    <fullName>EmployeeNumber__c</fullName>
    <label>Employee Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>