News UAT/force-app/main/default/objects/SalesSummaryStaging__c/fields/EmployeeRole__c.field-meta.xml
<CustomField>
    <fullName>EmployeeRole__c</fullName>
    <label>Employee Role</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>