News UAT/force-app/main/default/objects/SalesSummaryStaging__c/fields/EmployeeUniqueId__c.field-meta.xml
<CustomField>
    <fullName>EmployeeUniqueId__c</fullName>
    <label>Employee Unique Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>