News UAT/force-app/main/default/objects/SalesSummaryStaging__c/fields/END_TS__c.field-meta.xml
<CustomField>
    <fullName>END_TS__c</fullName>
    <label>END TS</label>
    <type>DateTime</type>
</CustomField>