News UAT/force-app/main/default/objects/SalesSummaryStaging__c/fields/EndRunId__c.field-meta.xml
<CustomField>
    <fullName>EndRunId__c</fullName>
    <label>End Run Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>