News UAT/force-app/main/default/objects/SalesSummaryStaging__c/fields/FiscMonth__c.field-meta.xml
<CustomField>
    <fullName>FiscMonth__c</fullName>
    <label>Fisc Month</label>
    <length>255</length>
    <type>Text</type>
</CustomField>