News UAT/force-app/main/default/objects/SalesSummaryStaging__c/fields/FiscMonthId__c.field-meta.xml
<CustomField>
    <fullName>FiscMonthId__c</fullName>
    <label>Fisc Month Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>