News UAT/force-app/main/default/objects/SalesSummaryStaging__c/fields/FiscYear__c.field-meta.xml
<CustomField>
    <fullName>FiscYear__c</fullName>
    <label>Fisc Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>