News UAT/force-app/main/default/objects/SalesSummaryStaging__c/fields/IncentiveMonthId__c.field-meta.xml
<CustomField>
    <fullName>IncentiveMonthId__c</fullName>
    <label>Incentive Month Id</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>