News UAT/force-app/main/default/objects/SalesSummaryStaging__c/fields/IncentivePlan__c.field-meta.xml
<CustomField>
    <fullName>IncentivePlan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incentive Plan</label>
    <type>Checkbox</type>
</CustomField>