News UAT/force-app/main/default/objects/SalesSummaryStaging__c/fields/ManagerUniqueId__c.field-meta.xml
<CustomField>
    <fullName>ManagerUniqueId__c</fullName>
    <label>Manager Unique Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>