News UAT/force-app/main/default/objects/SalesSummaryStaging__c/fields/NRActualRevenue__c.field-meta.xml
<CustomField>
    <fullName>NRActualRevenue__c</fullName>
    <label>NR Actual Revenue</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>