News UAT/force-app/main/default/objects/SalesSummaryStaging__c/fields/NRDebits__c.field-meta.xml
<CustomField>
    <fullName>NRDebits__c</fullName>
    <label>NR Debits</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>