News UAT/force-app/main/default/objects/SalesSummaryStaging__c/fields/NRPublishedRevenue__c.field-meta.xml
<CustomField>
    <fullName>NRPublishedRevenue__c</fullName>
    <label>NR Published Revenue</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>