News UAT/force-app/main/default/objects/SalesSummaryStaging__c/fields/NRTargetAmount__c.field-meta.xml
<CustomField>
    <fullName>NRTargetAmount__c</fullName>
    <label>NR Target Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>