News UAT/force-app/main/default/objects/SalesSummaryStaging__c/fields/PortfolioGroup__c.field-meta.xml
<CustomField>
    <fullName>PortfolioGroup__c</fullName>
    <label>Portfolio Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>