News UAT/force-app/main/default/objects/SalesSummaryStaging__c/fields/PortfolioName__c.field-meta.xml
<CustomField>
    <fullName>PortfolioName__c</fullName>
    <label>Portfolio Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>