News UAT/force-app/main/default/objects/SalesSummaryStaging__c/fields/SiebelLogin__c.field-meta.xml
<CustomField>
    <fullName>SiebelLogin__c</fullName>
    <label>Siebel Login</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>