News UAT/force-app/main/default/objects/SalesSummaryStaging__c/fields/SourceNK__c.field-meta.xml
<CustomField>
    <fullName>SourceNK__c</fullName>
    <externalId>true</externalId>
    <label>Source NK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>