News UAT/force-app/main/default/objects/SalesSummaryStaging__c/fields/TargetArea2__c.field-meta.xml
<CustomField>
    <fullName>TargetArea2__c</fullName>
    <label>Target Area 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>