News UAT/force-app/main/default/objects/SalesSummaryStaging__c/fields/TargetArea__c.field-meta.xml
<CustomField>
    <fullName>TargetArea__c</fullName>
    <label>Target Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>