News UAT/force-app/main/default/objects/SalesSummaryStaging__c/fields/TeamName__c.field-meta.xml
<CustomField>
    <fullName>TeamName__c</fullName>
    <label>Team Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>