News UAT/force-app/main/default/objects/SalesSummaryStaging__c/fields/TeamValue__c.field-meta.xml
<CustomField>
    <fullName>TeamValue__c</fullName>
    <label>Team Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>